--- a/index.html
+++ b/index.html
@@ -241,10 +241,7 @@
         </div>
 
         <div class="media-container">
-          <img src="images/gategod.png" alt="門神圖案" style="max-width: 400px; margin: 20px auto; display: none;" onerror="this.onerror=null; this.parentElement.innerHTML = this.parentElement.querySelector('.placeholder-img').outerHTML;">
-          <div class="placeholder-img" style="max-width: 400px; margin: 20px auto;">
-            🖼️ 門神圖案 (images/gategod.png)
-          </div>
+          <img src="images/gategod.png" alt="門神圖案" style="max-width: 100%; height: auto;">
         </div>
 
         <input id="input1" type="text" placeholder="請輸入成語">
@@ -794,3 +791,4 @@
 </script>
 </body>
 </html>
+
