--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <p class="lead">台東鯉魚山,其形如巨鯉化身,<br>傳說守護台東之風、雨、山、海。<br>山神以五片鱗片維持天地平衡。<br>神力散落後,世界開始失序……</p>
       
       <div class="media-container" style="margin: 20px auto 35px auto; max-width: 600px;">
-        <img src="images/cover.png" alt="遊戲封面圖：鯉魚山意象圖" style="max-width: 100%; height: auto;">
+        <img src="images/home.png" alt="遊戲封面圖：鯉魚山意象圖" style="max-width: auto; height: auto;">
       </div>
 
     </header>
@@ -222,14 +222,14 @@
             你已抵達鯉魚之心。
           </p>
           <p style="margin: 5px 0; color:rgba(255, 204, 102, 0.9);">
-            此處力量深沉，卻因封印而沉眠。<br>
-            解開成語之陣，心臟之鱗能甦醒。
+            此處力量深沉，<br>卻因封印而沉眠。<br>
+            解開成語之陣，<br>心臟之鱗能甦醒。
           </p>
           <strong style="display: block; margin-top: 15px; margin-bottom: 10px;">
             門神：
           </strong>
           <p style="margin: 5px 0; color:rgba(255, 204, 102, 0.9);">
-            力量被藏在我的容顏冠冕之中， 仔細琢磨，<br>
+            力量被藏在我的容顏冠冕之中， <br>仔細琢磨，<br>
             你便能看見命運留下的答案。
           </p>
           <p style="margin: 15px 0 0 0; color: var(--gold-main);font-weight: 700;">
@@ -749,5 +749,6 @@
 </script>
 </body>
 </html>
+
 
 
