--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <p class="lead">台東鯉魚山,其形如巨鯉化身,<br>傳說守護台東之風、雨、山、海。<br>山神以五片鱗片維持天地平衡。<br>神力散落後,世界開始失序……</p>
       
       <div class="media-container" style="margin: 20px auto 35px auto; max-width: 600px;">
-        <img src="images/home.png" alt="遊戲封面圖：鯉魚山意象圖" style="max-width: auto; height: auto;">
+        <img src="images/home.png" alt="遊戲封面圖：鯉魚山意象圖" style="max-width: 100%; height: auto;">
       </div>
 
     </header>
@@ -317,7 +317,7 @@
         <h2 style="font-size: 2rem; color: var(--hint-success); margin-bottom: 20px;">✅ 第二關 通過！</h2>
         
         <div class="media-container" style="margin: 30px auto; max-width: 400px;">
-          <img src="images/scale2.png" alt="巨鯉之眼" style="display: none;" onerror="this.onerror=null; this.parentElement.innerHTML = this.parentElement.querySelector('.placeholder-img').outerHTML;">
+          <img src="images/scale2.png" alt="巨鯉之眼" style="max-width: 100%; height: auto;">
         </div>
 
         <div style="font-size: 1.2rem; line-height: 1.8; color: var(--text-light); margin: 25px auto; padding: 20px; background: rgba(0, 0, 0, 0.5); border-radius: 10px; border-left: 5px solid var(--hint-success); max-width: 80%;">
@@ -749,6 +749,7 @@
 </script>
 </body>
 </html>
+
 
 
 
