--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             🎉 你找到第一片鱗片：<br>心臟之鱗
           </p>
           <p style="margin: 10px 0;">
-            做得好！你解開了門神的守護，<br>巨鯉的心臟開始跳動。
+            你解開了門神的守護，<br>巨鯉的心臟開始跳動。
           </p>
           <p style="margin: 10px 0;">
             下一個蹤跡，出現在鯉魚的眼睛……
@@ -281,7 +281,7 @@
         <h3>第二關｜鯉首 傳說</h3>
         <div style="margin-top:15px; line-height: 1.6;">
           <p style="margin: 5px 0; color:rgba(255, 204, 102, 0.9);">
-            台東平原少年與原住民公主的淒美愛情故事。<br>
+            台東平原少年與原住民公主<br>淒美的愛情故事...<br>
             少年因被追殺而自盡，化身為鯉魚山，留下了一封被撕毀的情書...
           </p>
           <p style="margin: 15px 0; color:rgba(255, 204, 102, 0.9);">
@@ -295,7 +295,7 @@
         </div>
           <p style="margin: 15px 0 0 0; font-weight: 700;">
             請幫助公主復原情書並解除封印<br>
-            請拿出被撕毀的情書，試著拼出原貌，<br>
+            拿出被撕毀的情書，拼出其原貌，<br>
             接著對照密碼卡，找出關鍵數字。<br>
             並在現場找出關鍵數字對應的山名<br>          
 <p style="margin: 15px 0; color: var(--gold-main); font-weight: 700;">
@@ -749,6 +749,7 @@
 </script>
 </body>
 </html>
+
 
 
 
