--- a/index.html
+++ b/index.html
@@ -360,15 +360,15 @@
         <div class="audio-player">
           <div class="audio-item">
             <label>鳥叫聲 1:</label>
-            <audio controls src="audio/bird1.mp3" style="display: none;"></audio>
+            <audio controls src="audio/bird1.mp3"></audio>
           </div>
           <div class="audio-item">
             <label>鳥叫聲 2:</label>
-             <audio controls src="audio/bird2.mp3" style="display: none;"></audio>
+             <audio controls src="audio/bird2.mp3"></audio>
           </div>
           <div class="audio-item">
             <label>鳥叫聲 3:</label>
-             <audio controls src="audio/bird3.mp3" style="display: none;"></audio>
+             <audio controls src="audio/bird3.mp3"></audio>
           </div>
 
           </div>
@@ -749,6 +749,7 @@
 </script>
 </body>
 </html>
+
 
 
 
