--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
       show('success1');
     } else {
       // 錯誤答案提示
-      hintEl.textContent = "❌ 似乎不對。試著觀察門神身上的『鹿』與 成語組合。";
+      hintEl.textContent = "❌ 似乎不對。試著觀察門神身上的『鹿』與 『冠』成語組合。";
       hintEl.classList.remove('hint-success');
       hintEl.classList.remove('hidden');
     }
@@ -749,6 +749,7 @@
 </script>
 </body>
 </html>
+
 
 
 
